src/client/sass/base/_base.scss
* {
    padding: 0;
    margin: 0;
    box-sizing: inherit;
}


html {
    font-size: 62.5%;
}


body {
    box-sizing: border-box;
    font-family: 'Lato', Arial, Helvetica, sans-serif;
    overflow-x: hidden;
}


.row {
    width: $row-width;
    margin: auto;
}

